<resources>
    <string name="app_name">VideoDownloader</string>
    <string name="insaver">Video Saver</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="browser">Browser</string>
    <string name="history">History</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_not_available">App Not Available</string>
    <string name="paste_link">Paste Link</string>
    <string name="download">Download</string>
    <string name="please_allow">please allow permission to use features</string>
    <string name="allow">allow</string>
    <string name="downloadStarted">Download Started</string>
    <string name="downloadCompleted">Download Completed </string>
    <string name="somethingWentWrong">Something went wrong, Try again!</string>
    <string name="link_parsing_successful_type_is_reels">Link parsing successful,type is Reels.</string>
    <string name="extract_audio">Extract Audio</string>
    <string name="play">Play</string>
    <string name="speed">Speed</string>
    <string name="open_instagram">Open Instagram</string>
    <string name="copy_text">Copy Text</string>
    <string name="repost">Repost</string>
    <string name="speed_playback">Speed Playback</string>
    <string name="wallapaper">Wallpaper</string>
    <string name="share">Share App</string>
    <string name="share_image_via">Share File...</string>
    <string name="video">VIDEOS</string>
    <string name="photo">PHOTOS</string>
    <string name="music">AUDIOS</string>
    <string name="delete">Delete</string>
    <string name="delete_d">Are you sure you want to delete this Video?</string>
    <string name="cancle">Cancel</string>
    <string name="language">Language</string>
    <string name="rate_our_app">Rate Us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="wallpaper_set">Wallpaper Set</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="reels_not_available">Instagram app is not available</string>
    <string name="setting">Setting</string>
    <string name="paste">Paste</string>
    <string name="audio">Audio</string>
    <string name="preview">Preview</string>
    <string name="select_language">Select Language</string>
    <string name="press">Press back again for exit</string>
    <string name="shares">Share</string>
    <string name="delete_video">Delete Video?</string>
    <string name="splash_desc">Paste any URL of photo, video, reels and story download instantly</string>
    <string name="apply_now">Apply Now</string>
    <string name="cancles">CANCLE</string>
    <string name="ok">OK</string>
    <string name="lock_screen">Lock screen</string>
    <string name="home_screen">Home screen</string>
    <string name="both">Both</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="audio_d">Are you sure you want to delete this Audio?</string>
    <string name="delete_audio">Delete Audio</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="extract_this_audio">Extract this audio .....</string>
    <string name="no_music_found">No Music Found</string>
    <string name="photo_d">Are you sure you want to delete this Photo?</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="no_images_found">No Images Found</string>
    <string name="no_videos_found">No Videos Found</string>
    <string name="login_with_instagram">Login With Instagram</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="russian">Russian</string>
    <string name="portuguese">Portuguese</string>
    <string name="german">German</string>
    <string name="indonesian">Indonesian</string>
    <string name="chinese">Chinese</string>
    <string name="filipino">Filipino</string>
    <string name="italian">Italian</string>
    <string name="afrikaans">Afrikaans</string>
    <string name="japanese">Japanese</string>
    <string name="korean">Korean</string>
    <string name="polish">Polish</string>
    <string name="thai">Thai</string>
    <string name="turkish">Turkish</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="logout_for_instagram">LogOut For Instagram?</string>
    <string name="story">STORY</string>
    <string name="posts">POSTS</string>
    <string name="logout">Logout</string>
    <string name="do_you_want_to_logout_your_instagram_account">Do you want to logout your Instagram account?</string>
    <string name="login">Login</string>
    <string name="do_you_want_to_login_your_instagram_account">Do you want to login your Instagram account?</string>

</resources>