<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/txtImageWallpaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/wallapaper"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtImageSpeedShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/txtImageWallpaper" />

    <TextView
        android:id="@+id/txtImageSpeedCopyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/copy_text"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/txtImageSpeedShare" />

    <TextView
        android:id="@+id/txtImageRepost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/repost"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/txtImageSpeedCopyText" />

    <TextView
        android:id="@+id/txtImageDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/txtImageRepost" />


</androidx.constraintlayout.widget.ConstraintLayout>